[package]
name = "abc163"
version = "0.1.0"
authors = ["YukiYuigishi <64316110+YukiYuigishi@users.noreply.github.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]

# competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
proconio = { version = "0.3.6" , features = ["derive"]}

[profile.release]
lto = true
panic = 'abort'
